--- a/index.html
+++ b/index.html
@@ -110,6 +110,21 @@
     <p>Игорь</p>
     <div>#лгбт #против #ебанат</div><br>
     <a class="hui" href="">Поддержать</a>
+    <hr>
+    <h1>Кирпич</h1>
+    <p>Дома строят из кирпичей</p>
+    <div>#чтооооо #правда? #ммм</div><br>
+    <a class="hui" href="">Поддержать</a>
+    <hr>
+    <h1>Шлакоблок</h1>
+    <p>Дома строят из шлакоблоков</p>
+    <div>#чтооооо #правда? #ммм</div><br>
+    <a class="hui" href="">Поддержать</a>
+    <hr>
+    <h1>Вика</h1>
+    <p>Вика умеет красиво петь</p>
+    <div>#чтооооо #правда? #ммм</div><br>
+    <a class="hui" href="">Поддержать</a>
     <br><br><br>
 </body>
 </html>
