--- a/vhod.html
+++ b/vhod.html
@@ -80,7 +80,7 @@
         <h1>Добро пожаловать</h1>
         <p>Логин</p>
         <input type="email">
-        <p>Номер</p>
+        <p>Пароль</p>
         <input type="password">
         <br><br><br><br>
         <a class="bbbb" href="index.html">Войти</a><a class="bbbb" href="index.html">Зарегаться</a>
