--- a/index.html
+++ b/index.html
@@ -123,7 +123,7 @@
     <hr>
     <h1>Вика</h1>
     <p>Вика умеет красиво петь</p>
-    <div>#чтооооо #правда? #ммм</div><br>
+    <div>#красиво #творчество #ммм</div><br>
     <a class="hui" href="">Поддержать</a>
     <br><br><br>
 </body>
