--- a/index.html
+++ b/index.html
@@ -108,7 +108,7 @@
     <hr>
     <h1>Игорь</h1>
     <p>Игорь</p>
-    <div>#лгбт #против #ебанат</div><br>
+    <div>#игорь #игорь #игорь</div><br>
     <a class="hui" href="">Поддержать</a>
     <hr>
     <h1>Кирпич</h1>
