--- a/index.html
+++ b/index.html
@@ -66,6 +66,11 @@
         <a class="bbbb" href="vhod.html">Войти</a>
     </header>
     <br><br><br>
+    <h1>Кинули Эдит</h1>
+    <p>Оливье кинула эдит(?)</p>
+    <div>#оливье #эдит #ебанат</div><br>
+    <a class="hui" href="">Поддержать</a>
+    <hr>
     <h1>Ладно против трансгендеров</h1>
     <p>Ему похуй на однополые отношения, трансов ненавидит</p>
     <div>#лгбт #против #ебанат</div><br>
