--- a/index.html
+++ b/index.html
@@ -66,70 +66,80 @@
         <a class="bbbb" href="vhod.html">Войти</a>
     </header>
     <br><br><br>
+    <h1>Энгелу мстят</h1>
+    <p>Охуенными песнями</p>
+    <div>#подвал #каноа #месть</div><br>
+    <a class="hui" href="">Поддержать</a><a class="hui" href="">Хуйня</a>
+    <hr>
+    <h1>Сайт обновлен</h1>
+    <p>Ебанат(Ладно) обновил сайт новостей (нахуя)</p>
+    <div>#нахуя #новости #ебанат</div><br>
+    <a class="hui" href="">Поддержать</a><a class="hui" href="">Хуйня</a>
+    <hr>
     <h1>Кинули Эдит</h1>
     <p>Оливье кинула эдит(?)</p>
     <div>#оливье #эдит #ебанат</div><br>
-    <a class="hui" href="">Поддержать</a>
+    <a class="hui" href="">Поддержать</a><a class="hui" href="">Хуйня</a>
     <hr>
     <h1>Ладно против трансгендеров</h1>
     <p>Ему похуй на однополые отношения, трансов ненавидит</p>
     <div>#лгбт #против #ебанат</div><br>
-    <a class="hui" href="">Поддержать</a>
+    <a class="hui" href="">Поддержать</a><a class="hui" href="">Хуйня</a>
     <hr>
     <h1>Мотылёк - Мотылёк</h1>
     <p>Что тут еще сказать</p>
     <div>#мотыль #мотылек #нет_слов</div><br>
-    <a class="hui" href="">Поддержать</a>
+    <a class="hui" href="">Поддержать</a><a class="hui" href="">Хуйня</a>
     <hr>
     <h1>Энгел мертв</h1>
     <p>бумажный энгел одного пользователя тг был разорван</p>
     <div>#смерть #жалко #блин</div><br>
-    <a class="hui" href="">Поддержать</a>
+    <a class="hui" href="">Поддержать</a><a class="hui" href="">Хуйня</a>
     <hr>
     <h1>Ладно совсем охуел</h1>
     <p>Ладно совсем охуел, и?</p>
     <div>#охуел #ясно #ебанат</div><br>
-    <a class="hui" href="">Поддержать</a>
+    <a class="hui" href="">Поддержать</a><a class="hui" href="">Хуйня</a>
     <hr>
     <h1>У Канао Цуюри есть девушка</h1>
     <p>Тут нечего сказать</p>
-    <div>#черешня #отношения #поздравляю</div><br>
-    <a class="hui" href="">Поддержать</a>
+    <div>#черешня #отношения #каноа</div><br>
+    <a class="hui" href="">Поддержать</a><a class="hui" href="">Хуйня</a>
     <hr>
     <h1>Пролистывай</h1>
     <p>ЛИСТАЙ ЛИСТАЙ</p>
     <div>#листай #вниз #туда</div><br>
-    <a class="hui" href="">Поддержать</a>
+    <a class="hui" href="">Поддержать</a><a class="hui" href="">Хуйня</a>
     <hr>
     <h1>Ладно ебанулся</h1>
     <p>У Ладно нет девушки, уже</p>
     <div>#охуенно #классно #мммм</div><br>
-    <a class="hui" href="">Поддержать</a>
+    <a class="hui" href="">Поддержать</a><a class="hui" href="">Хуйня</a>
     <hr>
     <h1>Чебурек вокзальный</h1>
     <p>Анфиса - чебурек вокзальный</p>
     <div>#чебурек #кот #ок</div><br>
-    <a class="hui" href="">Поддержать</a>
+    <a class="hui" href="">Поддержать</a><a class="hui" href="">Хуйня</a>
     <hr>
     <h1>Игорь</h1>
     <p>Игорь</p>
     <div>#игорь #игорь #игорь</div><br>
-    <a class="hui" href="">Поддержать</a>
+    <a class="hui" href="">Поддержать</a><a class="hui" href="">Хуйня</a>
     <hr>
     <h1>Кирпич</h1>
     <p>Дома строят из кирпичей</p>
     <div>#чтооооо #правда? #ммм</div><br>
-    <a class="hui" href="">Поддержать</a>
+    <a class="hui" href="">Поддержать</a><a class="hui" href="">Хуйня</a>
     <hr>
     <h1>Шлакоблок</h1>
     <p>Дома строят из шлакоблоков</p>
     <div>#чтооооо #правда? #ммм</div><br>
-    <a class="hui" href="">Поддержать</a>
+    <a class="hui" href="">Поддержать</a><a class="hui" href="">Хуйня</a>
     <hr>
     <h1>Вика</h1>
     <p>Вика умеет красиво петь</p>
     <div>#красиво #творчество #ммм</div><br>
-    <a class="hui" href="">Поддержать</a>
+    <a class="hui" href="">Поддержать</a><a class="hui" href="">Хуйня</a>
     <br><br><br>
 </body>
 </html>
