--- a/index.html
+++ b/index.html
@@ -66,6 +66,21 @@
         <a class="bbbb" href="vhod.html">Войти</a>
     </header>
     <br><br><br>
+    <h1>Ладно обосрался</h1>
+    <p>Ладно(еблан) поиграл в SCP. ЭТО ДАЖЕ НЕ ХОРООР НО Я ОБОСРАЛСЯ!!!!</p>
+    <div>#подвал #ебанат #оливье</div><br>
+    <a class="hui" href="">Поддержать</a><a class="hui" href="">Хуйня</a>
+    <hr>
+    <h1>Извинения</h1>
+    <p>Ладно(еблан) привел свои извенения насчет бунта и стер его следы. Цитата - «Извиняюсь за бунт. Все следы вычещены, я сам хз что высрал»</p>
+    <div>#подвал #ебанат #оливье</div><br>
+    <a class="hui" href="">Поддержать</a><a class="hui" href="">Хуйня</a>
+    <hr>
+    <h1>Бунт в подвале</h1>
+    <p>Ладно(еблан) и другие участники начали массовый протест в "подвал" против трансгендеров</p>
+    <div>#подвал #ебанат #оливье</div><br>
+    <a class="hui" href="">Поддержать</a><a class="hui" href="">Хуйня</a>
+    <hr>
     <h1>Энгелу мстят</h1>
     <p>Охуенными песнями</p>
     <div>#подвал #каноа #месть</div><br>
