--- a/index.html
+++ b/index.html
@@ -68,7 +68,7 @@
     <br><br><br>
     <h1>Ладно обосрался</h1>
     <p>Ладно(еблан) поиграл в SCP. ЭТО ДАЖЕ НЕ ХОРООР НО Я ОБОСРАЛСЯ!!!!</p>
-    <div>#подвал #ебанат #оливье</div><br>
+    <div>#каноа #ебанат #игры</div><br>
     <a class="hui" href="">Поддержать</a><a class="hui" href="">Хуйня</a>
     <hr>
     <h1>Извинения</h1>
