--- a/index.html
+++ b/index.html
@@ -84,7 +84,7 @@
         <h1>Добро пожаловать!</h1>
         <a class="hui" href="#" id="watchNews">Смотреть новости</a><br><br>
         <a class="hui" href="vhod.html">Войти в аккаунт</a><br><br>
-        <a class="hui" href="news.html" id="registerButton">Зарегаться</a>
+        <a class="hui" href="news.html" id="registerButton">Удалить аккаунт</a>
     </center>
 
     <script>
